# hriv

./: .envrc  .gitattributes  .gitignore  .prettierignore  .release-please-manifest.json  .trivyignore  AGENTS.md  CODEOWNERS  Dockerfile  README.md  REVIEW.md  docker-compose.observability.yml  docker-compose.yml  hriv-practical-observability-implementation-plan.md  release-please-config.json  shell.nix
.direnv/: nix-profile-pre980800.566acc07c54d  nix-profile-pre980800.566acc07c54d.rc
.githooks/: pre-commit
.github/: CONTRIBUTING.md
archive/: .helmignore  Dockerfile  Makefile  docker-entrypoint.sh
backend/: .coverage  .env  .env.vault-example  CHANGELOG.md  Dockerfile  README.md  THIRD-PARTY-LICENSES.txt  pyproject.toml  version.txt
backend/app/: admin_ops.py  auth.py  auth_events.py  authz.py  backup_access.py  backup_metrics.py  build_info_metrics.py  component_versions.py  database.py  feedback.py  image_validation.py  logging_config.py  main.py  maintenance.py  metrics.py  middleware.py  migrations_bootstrap.py  models.py  otel_bootstrap.py  processing.py  rate_limit.py  schemas.py  serializers.py  synthetic_metrics.py  synthetic_result.py  tile_provenance.py  tracing.py  visibility.py  worker.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 0001_initial_schema.py  0002_add_admin_tasks.py  0003_rbac_program_scoping.py  0004_drop_image_level_programs.py  0005_add_program_oidc_group.py  0006_add_image_sort_order.py  0007_add_program_parent.py  0008_normalize_user_email_case.py  0009_drop_program_parent.py  0010_add_groups.py  0011_add_category_version.py  0012_add_changelog_entries.py  0012_alter_note_to_text.py  0013_alter_note_to_text.py  0014_add_tile_provenance.py  0015_drop_user_email_unique.py  0016_add_admin_task_original_filename.py  0016_admin_task_orig_filename.py  0017_image_file_size_bytes.py
backend/app/routers/: admin.py  announcement.py  auth.py  bulk_import.py  categories.py  changelog.py  groups.py  images.py  issues.py  oidc.py  programs.py  telemetry.py  upload.py  users.py
backend/tests/: conftest.py  test_admin_ops.py  test_auth.py  test_auth_events.py  test_authz.py  test_backup_access.py  test_backup_metrics.py  test_build_info_metrics.py  test_categories.py  test_database.py  test_feedback.py  test_images.py  test_logging_config.py  test_main.py  test_maintenance.py  test_maintenance_middleware.py  test_metrics.py  test_middleware.py  test_migration_role_helpers.py  test_migrations_bootstrap.py  test_otel_bootstrap.py  test_processing.py  test_rate_limit.py  test_router_admin.py  test_router_announcement.py  test_router_auth.py  test_router_bulk_import.py  test_router_changelog.py  test_router_groups.py  test_router_images.py  test_router_issues.py  test_router_oidc.py  test_router_programs.py  test_router_upload.py  test_router_users.py  test_schemas.py  test_synthetic_result.py  test_telemetry.py  test_tile_provenance.py  test_tracing.py  (+2 more)
backup/: CHANGELOG.md  Dockerfile  README.md  THIRD-PARTY-LICENSES.txt  backup.py  pyproject.toml
backup/scripts/: generate_third_party_licenses.py
backup/tests/: test_backup.py
db/: init.sql  seed.sql
deploy/: README.md
docker/: grafana-datasources.yaml  otel-collector-config.yaml  prometheus.yaml  tempo.yaml
docs/: FLUXCD_VALUES_MIGRATION_PROMPT.md  OIDC_SETUP.md  RELEASE_AND_DEPLOY_FLOW.md  SCALABILITY_PLAN.md  TESTING.md  admin-import-export.md  agent-feature-map.md  agent-test-matrix.md  backup-and-disaster-recovery.md  backup-restore-runbook.md  category-visibility-and-programs.md  changelog-notifications.md  cli-upload.sh  domain-model.md  drag-and-drop.md  feedback-subsystem.md  groups.md  image-metadata-and-versioning.md  image-processing-lifecycle.md  instructor-cohorts.md  observability-conventions.md  observability-operations.md  observability-runbooks.md  per-file-restore-design.md  rebuild-tiles-architecture-plan.md  synthetic-monitoring.md  tile-cache-provenance.md  ui-behaviour-spec.md
frontend/: .git-blame-ignore-revs  CHANGELOG.md  Dockerfile  README.md  (+7 more)
(+533 files in other folders)
