[tool.poetry]
name = "hriv-backend"
version = "0.1.0"
description = "HRIV Image Library API"
authors = ["Devin AI"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.0"
asyncpg = "^0.30.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-multipart = "^0.0.22"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
bcrypt = "^5.0.0"
httpx = "^0.28.0"
pyvips = "^2.2.0"
authlib = "^1.3.0"
itsdangerous = ">=1.1.0"
arq = "^0.27.0"
redis = "^5.0.0"
opentelemetry-distro = "^0.57b0"
opentelemetry-exporter-otlp = "^1.36.0"
opentelemetry-instrumentation-fastapi = "^0.57b0"
opentelemetry-instrumentation-httpx = "^0.57b0"
opentelemetry-instrumentation-sqlalchemy = "^0.57b0"
alembic = "^1.13.0"
opentelemetry-distro = "^0.57b0"
opentelemetry-exporter-otlp = "^1.36.0"
opentelemetry-instrumentation-fastapi = "^0.57b0"
opentelemetry-instrumentation-httpx = "^0.57b0"
opentelemetry-instrumentation-sqlalchemy = "^0.57b0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
