[tool.poetry]
name = "corgi-backup"
version = "0.1.0"
description = "Corgi Disaster Recovery Backup Service"
authors = ["Devin AI"]

[tool.poetry.dependencies]
python = "^3.11"
azure-storage-blob = "^12.20.0"
croniter = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
