[tool.poetry]
name = "hriv-backup"
version = "0.6.0"
description = "HRIV Disaster Recovery Backup Service"
authors = ["Devin AI"]

[tool.poetry.dependencies]
python = "^3.11"
azure-storage-blob = "^12.20.0"
croniter = "^5.0.0"
opentelemetry-distro = "^0.57b0"
opentelemetry-exporter-otlp = "^1.36.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
